--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,9 +68,8 @@ a:focus {
 }
 
 /* Header Styles */
-header {
-    background-image: url(https://files.oaiusercontent.com/file-PM3b7dpSV8psZUg6bGC9DT?se=2024-12-31T14%3A54%3A17Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dd7eff184-efdd-4e67-86f3-c698a30680b2.webp&sig=2pWdu5/CgwRL/UEVSX3xwUFj7i8rjTngQQAOj3j48%2Bs%3D); /* Dark purple for header */
-    color: white;
+header { /* Dark purple for header */
+    color: black;
     padding: 20px 30px;
     text-align: center;
 }
@@ -78,7 +77,7 @@ header {
 header h1 {
     margin: 0;
     font-size: 2.8em;
-    color: white; /* White color for main header text */
+    color: black; /* White color for main header text */
 }
 
 /* Navigation Styles */
@@ -88,7 +87,7 @@ nav {
 
 nav a {
     margin: 0 15px;
-    color: white;
+    color: black;
     font-size: 1.1em;
     display: inline-block;
 }
@@ -362,4 +361,5 @@ h1, h2, h3 {
 .report-incident-btn:hover {
     background-color: rgb(87, 12, 87); /* Darker green on hover */
 }
+
 
